tests/baselines/reference/ES5For-ofTypeCheck14.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-ofTypeCheck14.ts(2,17): error TS2568: Type 'Set<number>' is not an array type. Either use the '--downlevelIteration' compiler option to allow iterating on iterators, or set the '--target' option to es2015 or above.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-ofTypeCheck14.ts (1 errors) ====
    var union: string | Set<number>
    for (const e of union) { }
                    ~~~~~
!!! error TS2568: Type 'Set<number>' is not an array type. Either use the '--downlevelIteration' compiler option to allow iterating on iterators, or set the '--target' option to es2015 or above.